--- a/3-cell-loader.css
+++ b/3-cell-loader.css
@@ -22,7 +22,7 @@ ul{
 }
 
 li{
-  background: linear-gradient(120deg, #f5f5f5, #dedede, #dedede, #ffffff);
+  background: linear-gradient(120deg, #f5f5f5, #dedede, #dedede, #e8e8e8);
   background-size: 700% 700%;
   margin:0 0 13px 0;
   -webkit-animation: li-c 1.3s infinite ease-in-out;
