--- a/3-cell-loader.css
+++ b/3-cell-loader.css
@@ -32,7 +32,7 @@ li{
 li:nth-child(1){
   width: 32px;
   height: 32px;
-  border: solid 2px #e6e6e6;
+  border: solid 2px;
   border-radius: 50%;
   background:transparent;
   margin:0 0 8px 0;
